--- a/src/main/res/layout/activity_account.xml
+++ b/src/main/res/layout/activity_account.xml
@@ -18,7 +18,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/name_acount"
+            android:id="@+id/title1"
             android:layout_width="match_parent"
             android:layout_height="105dp"
             android:fontFamily="sans-serif-medium"
@@ -42,7 +42,7 @@
             app:layout_constraintGuide_begin="110dp" />
 
         <TextView
-            android:id="@+id/comment"
+            android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_gravity="center"
@@ -60,7 +60,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.8"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_number"
+            app:layout_constraintTop_toBottomOf="@+id/mean"
             app:layout_constraintVertical_bias="0.215" />
 
         <Button
@@ -78,7 +78,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/comment"
+            app:layout_constraintTop_toBottomOf="@+id/content"
             tools:ignore="SpeakableTextPresentCheck">
 
         </Button>
@@ -95,10 +95,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/name_acount" />
+            app:layout_constraintTop_toBottomOf="@+id/title1" />
 
         <TextView
-            android:id="@+id/tv_number"
+            android:id="@+id/mean"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
