--- a/src/main/res/layout/datalist.xml
+++ b/src/main/res/layout/datalist.xml
@@ -20,7 +20,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/name_acount"
+            android:id="@+id/title1"
             android:layout_width="match_parent"
             android:layout_height="105dp"
             android:fontFamily="sans-serif-medium"
@@ -44,7 +44,7 @@
             app:layout_constraintGuide_begin="110dp" />
 
         <TextView
-            android:id="@+id/comment"
+            android:id="@+id/content"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_gravity="center"
@@ -63,7 +63,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.8"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_number"
+            app:layout_constraintTop_toBottomOf="@+id/mean"
             app:layout_constraintVertical_bias="0.215" />
 
         <Button
@@ -82,7 +82,7 @@
             app:layout_constraintEnd_toStartOf="@+id/btn_home"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/comment"
+            app:layout_constraintTop_toBottomOf="@+id/content"
             app:layout_constraintVertical_bias="0.511"
             tools:ignore="SpeakableTextPresentCheck">
 
@@ -122,10 +122,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/name_acount" />
+            app:layout_constraintTop_toBottomOf="@+id/title1" />
 
         <TextView
-            android:id="@+id/tv_number"
+            android:id="@+id/mean"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginTop="20dp"
