--- a/src/main/res/layout/activity_account.xml
+++ b/src/main/res/layout/activity_account.xml
@@ -52,7 +52,7 @@
             android:lineSpacingExtra="5dp"
             android:paddingHorizontal="15dp"
             android:paddingTop="15dp"
-            android:text="어플 이용에 감사합니다."
+            android:text="조금더 노력해 봐요!"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="17sp"
@@ -104,7 +104,7 @@
             android:layout_marginTop="20dp"
             android:gravity="center"
             android:paddingHorizontal="15dp"
-            android:text="0"
+            android:text="5 개"
             android:textColor="#363333"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
