--- a/src/main/res/menu/navi_menu.xml
+++ b/src/main/res/menu/navi_menu.xml
@@ -8,7 +8,7 @@
         <item
             android:id="@+id/menu_item2"
             style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-            android:title="설정" />
+            android:title="잠금화면 설정" />
 
     </group>
 </menu>
