--- a/src/main/res/layout/navi_header.xml
+++ b/src/main/res/layout/navi_header.xml
@@ -13,7 +13,7 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/navi_icon"
         android:layout_width="70dp"
         android:layout_height="70dp"
 
